--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* Global styles for MUI */
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
